# inline-actions

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  inline_actions.py  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yaml  pre-commit-autoupdate.yaml  pre-commit.yaml  release.yaml
integration-tests/: conftest.py  test_integration.py  test_remote.py
integration-tests/action-outputs/workflow-sources/: test.yaml
integration-tests/complex-input-expressions/workflow-sources/: test.yaml
integration-tests/complex-output-expression/workflow-sources/: test.yaml
integration-tests/default-inputs/workflow-sources/: test.yaml
integration-tests/github-action-path/workflow-sources/: test.yaml
integration-tests/if-condition-inputs/workflow-sources/: test.yaml
integration-tests/mixed-steps/workflow-sources/: test.yaml
integration-tests/multiple-actions/workflow-sources/: test.yaml
integration-tests/multiple-jobs/workflow-sources/: test.yaml
integration-tests/multiple-workflows/workflow-sources/: ci.yaml  deploy.yaml
integration-tests/nested-with-values/workflow-sources/: test.yaml
integration-tests/no-inputs/workflow-sources/: test.yaml
integration-tests/non-composite-action/workflow-sources/: test.yaml
integration-tests/outputs-across-jobs/workflow-sources/: test.yaml
integration-tests/preserved-expressions/workflow-sources/: test.yaml
integration-tests/scalar-styles/workflow-sources/: test.yaml
tests/: test_inline_actions.py
(+38 files in other folders)
